# bia6304-assignment3

./: .gitignore  README.md  pyproject.toml
assets/: documents_40.tsv
assignment/: __main__.py  assignment3.py  config.py
assignment/documents/: __init__.py  dqm.py  embedding.py
tests/integration/: test_store_document.py
tests/unit/: test_assignment.py
